create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -507,6 +507,10 @@ h6,
 }
 #content6-8 UL {
   font-size: 24px;
+  text-align: left;
+}
+#content6-8 DIV {
+  font-size: 24px;
 }
 #ext_menu-4 .hide-buttons .nav-btn {
   display: none !important;
@@ -761,6 +765,82 @@ h6,
   font-size: 24px;
 }
 #contacts2-g UL {
+  color: #000000;
+  text-align: left;
+}
+
+#ext_menu-j .hide-buttons .nav-btn {
+  display: none !important;
+}
+#ext_menu-j .navbar-caption {
+  color: #ffffff;
+  font-size: 24px;
+  font-family: 'Oxygen', sans-serif;
+}
+#ext_menu-j .navbar-toggler {
+  color: #f90999;
+}
+#ext_menu-j .close-icon::before,
+#ext_menu-j .close-icon::after {
+  background-color: #f90999;
+}
+#ext_menu-j .link,
+#ext_menu-j .dropdown-item {
+  color: #f90999;
+}
+#ext_menu-j .link {
+  font-size: 1rem;
+}
+#ext_menu-j .dropdown-item,
+#ext_menu-j .nav-dropdown-sm .link {
+  font-size: 1.083rem;
+}
+#ext_menu-j .link:hover,
+#ext_menu-j .dropdown-item:hover,
+#ext_menu-j .link:focus,
+#ext_menu-j .dropdown-item:focus {
+  color: #f28281;
+}
+#ext_menu-j .link[aria-expanded="true"],
+#ext_menu-j .dropdown-menu {
+  background: #e6e6e6;
+}
+#ext_menu-j .nav-dropdown-sm .link:focus,
+#ext_menu-j .nav-dropdown-sm .link:hover,
+#ext_menu-j .nav-dropdown-sm .dropdown-item:focus,
+#ext_menu-j .nav-dropdown-sm .dropdown-item:hover {
+  background: #f7f7f7!important;
+}
+#ext_menu-j .navbar,
+#ext_menu-j .nav-dropdown-sm,
+#ext_menu-j .nav-dropdown-sm .link[aria-expanded="true"],
+#ext_menu-j .nav-dropdown-sm .dropdown-menu {
+  background: #ffffff;
+}
+#ext_menu-j .bg-color.transparent .link {
+  color: #f90999;
+  transition: none;
+}
+#ext_menu-j .bg-color.transparent.opened .link {
+  transition: color 0.2s ease-in-out;
+}
+#ext_menu-j .bg-color.transparent.opened .link:hover,
+#ext_menu-j .bg-color.transparent.opened .link:focus {
+  color: #f28281;
+}
+#ext_menu-j .link[aria-expanded="true"],
+#ext_menu-j .dropdown-item[aria-expanded="true"] {
+  color: #f28281!important;
+}
+#contacts2-k STRONG {
+  color: #000000;
+  font-size: 18px;
+}
+#contacts2-k P {
+  color: #000000;
+  font-size: 24px;
+}
+#contacts2-k UL {
   color: #000000;
   text-align: left;
 }
